# rust-react-template

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  main.rs  state.rs
crates/api/src/routes/: auth.rs  health.rs  mod.rs  profiles.rs  ws.rs
crates/api/tests/: api_tests.rs
crates/api/tests/common/: mod.rs
crates/api/tests/snapshots/: api_tests__health_check.snap
crates/db/: Cargo.toml
crates/db/src/: lib.rs  pool.rs
crates/db/src/repositories/: mod.rs  profiles.rs  users.rs
crates/domain/: CLAUDE.md  Cargo.toml
crates/domain/src/: lib.rs  profiles.rs
crates/frontend/src/types/bindings/: Profile.ts  WsEvent.ts
crates/shared/: Cargo.toml
crates/shared/src/: types.rs
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: button.test.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: LoginPage.tsx  ProfilePage.tsx  ProfilesPage.tsx
frontend/src/types/bindings/: WsEvent.ts  index.ts
migrations/: 20241215_001_initial.sql
scripts/: generate-types.sh
