[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TypeScript generation
ts-rs = "10"

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
shared = { path = "crates/shared" }
domain = { path = "crates/domain" }
db = { path = "crates/db" }
