[package]
name = "api"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
domain = { path = "../domain" }
db = { path = "../db" }

axum.workspace = true
tokio.workspace = true
futures-util.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
argon2.workspace = true
tower-cookies.workspace = true
uuid.workspace = true
sqlx.workspace = true
rand.workspace = true
